# NeuralSynthParameters

./: CMakeLists.txt  README.md
resources/: magic.xml
src/: NeuralNetwork.cpp  NeuralNetwork.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  test_nn.cpp
